# chronicle

./: .gitignore  Dockerfile  PUBLISH.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-manual.yml
apps/api/: main.py
apps/collector/: run.py
apps/scheduler/: run.py
chronicle/: config.py  logging.py  utils.py
chronicle/cluster/: algos.py  pipeline.py
chronicle/nlp/: embedding.py
chronicle/storage/: db.py
chronicle/timeline/: summarize.py
tests/: conftest.py  test_algos.py  test_api.py  test_db.py  test_embedding.py  test_summarize.py
