[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-events"
version = "0.1.0"
description = "Intelligent event detection system using semantic embeddings, MinHash LSH deduplication, and HDBSCAN clustering"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nick Anderson", email = "your.email@example.com"}
]
keywords = [
    "machine-learning",
    "nlp",
    "clustering",
    "event-detection",
    "news-aggregation",
    "hdbscan",
    "semantic-search",
    "text-mining"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.6,<1.0.0",
    "httpx>=0.27.2,<1.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "readability-lxml>=0.8.1,<1.0.0",
    "lxml>=5.3.0,<6.0.0",
    "numpy>=2.1.0,<3.0.0",
    "scikit-learn>=1.5.2,<2.0.0",
    "hdbscan>=0.8.38,<1.0.0",
    "datasketch>=1.6.5,<2.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "sentence-transformers>=3.0.1,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dukeblue1994-glitch/chronicle"
Repository = "https://github.com/dukeblue1994-glitch/chronicle"
Issues = "https://github.com/dukeblue1994-glitch/chronicle/issues"

[project.scripts]
chronicle-collector = "apps.collector.run:main"
chronicle-api = "apps.api.main:main"
chronicle-cluster = "chronicle.cluster.pipeline:main"

[tool.setuptools.packages.find]
include = ["chronicle*", "apps*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
