[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-events"
version = "0.1.0"
description = "Intelligent event detection system using semantic embeddings, MinHash LSH deduplication, and HDBSCAN clustering"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nick Anderson", email = "your.email@example.com"}
]
keywords = [
    "machine-learning",
    "nlp",
    "clustering",
    "event-detection",
    "news-aggregation",
    "hdbscan",
    "semantic-search",
    "text-mining"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.6,<1.0.0",
    "httpx>=0.27.2,<1.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "readability-lxml>=0.8.1,<1.0.0",
    "lxml>=5.3.0,<6.0.0",
    "numpy>=2.1.0,<3.0.0",
    "scikit-learn>=1.5.2,<2.0.0",
    "hdbscan>=0.8.38,<1.0.0",
    "datasketch>=1.6.5,<2.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sentence-transformers>=3.0.1,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-beautifulsoup4>=4.12.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/dukeblue1994-glitch/chronicle"
Repository = "https://github.com/dukeblue1994-glitch/chronicle"
Issues = "https://github.com/dukeblue1994-glitch/chronicle/issues"

[project.scripts]
chronicle-collector = "apps.collector.run:main"
chronicle-api = "apps.api.main:main"
chronicle-cluster = "chronicle.cluster.pipeline:main"
chronicle-scheduler = "apps.scheduler.run:main"

[tool.setuptools.packages.find]
include = ["chronicle*", "apps*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=chronicle",
    "--cov=apps",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "hdbscan.*",
    "datasketch.*",
    "sentence_transformers.*",
    "readability.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["chronicle", "apps"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py39"
